k8s/base/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: zerodowntime
  labels:
    app.kubernetes.io/part-of: zerodowntime-pipeline
