k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: zerodowntime-app
  namespace: zerodowntime
  labels:
    app: zerodowntime-app
spec:
  type: ClusterIP
  selector:
    app: zerodowntime-app
    # Only route to stable pods; canary gets its own Service
    version: stable
  ports:
    - port: 80
      targetPort: http
      protocol: TCP
      name: http
